image/imgRequest.cpp
@@ -61,6 +61,7 @@ imgRequest::imgRequest(imgLoader* aLoader, const ImageCacheKey& aCacheKey)
       mCORSMode(imgIRequest::CORS_NONE),
       mReferrerPolicy(mozilla::net::RP_Unset),
       mImageErrorCode(NS_OK),
+      mImageAvailable(false),
       mMutex("imgRequest"),
       mProgressTracker(new ProgressTracker()),
       mIsMultiPartChannel(false),
@@ -978,6 +979,7 @@ void imgRequest::FinishPreparingForNewPart(const NewPartResult& aResult) {
 
   if (aResult.mIsFirstPart) {
     // Notify listeners that we have an image.
+    mImageAvailable = true;
     RefPtr<ProgressTracker> progressTracker = GetProgressTracker();
     progressTracker->OnImageAvailable();
     MOZ_ASSERT(progressTracker->HasImage());
@@ -991,6 +993,8 @@ void imgRequest::FinishPreparingForNewPart(const NewPartResult& aResult) {
     aResult.mImage->StartDecoding(imgIContainer::FLAG_NONE);
   }
 }
+
+bool imgRequest::ImageAvailable() const { return mImageAvailable; }
 
 NS_IMETHODIMP
 imgRequest::OnDataAvailable(nsIRequest* aRequest, nsIInputStream* aInStr,
